--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.KasirPintarTest">
-        <activity android:name=".ui.addupdate.AddUpdateActivity"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.addupdate.AddUpdateActivity"
+            android:parentActivityName=".ui.main.MainActivity"/>
+        <activity android:name=".ui.main.MainActivity"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
